<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeXpert</string>
    <string name="title_activity_latex_editing">TeXpert</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Actions, menu labels -->
    <string name="action_file">File</string>
    <string name="action_new">New</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="action_clean">Clean</string>
    <string name="action_pdflatex">pdfLaTeX</string>
    <string name="action_bibtex">BibTeX</string>
    <string name="action_open_pdf">Open PDF</string>
    <string name="action_edit">Edit</string>
    <string name="action_undo">Undo</string>
    <string name="action_search">Search</string>
    <string name="action_format">Format</string>
    <string name="action_wordwrap">Word wrap</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_replace">Replace</string>
    <string name="action_toggle_quick_access">Toggle quick access</string>
    <string name="search_with_regex">Regular expression</string>

    <!-- Hints -->
    <string name="hint_search_for">Pattern to search for</string>
    <string name="hint_replace_with">Replace with</string>

    <!-- Error messages -->
    <string name="message_cannot_send_texportal">Cannot send document for compilation: TeXPortal is not installed!</string>
    <string name="message_cannot_save_document">Cannot save document!</string>
    <string name="message_cannot_open_document">Cannot open document!</string>
    <string name="message_no_pdf_viewer_app">No PDF viewer app found!</string>
    <string name="message_unimplemented_feature">This feature is not implemented yet!</string>

    <!-- Information messages -->
    <string name="info_reading_in_progress">Reading in progress &#8230;</string>
    <string name="info_no_pdf_to_open">No PDF file to open</string>

    <!-- Settings -->
    <string name="pref_header_editor">Editing</string>
    <string name="pref_header_compilation">Compilation</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="pref_title_font_family">Font family</string>
    <string name="pref_title_autosave_before_compile">Autosave before compile</string>
    <string name="pref_title_backup_on_suspend">Backup on suspend</string>

    <string-array name="font_sizes">
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>36</item>
        <item>40</item>
    </string-array>
    <string-array name="font_families">
        <item>Sans Serif</item>
        <item>Monospace</item>
        <item>Serif</item>
    </string-array>

    <!-- Dialogs titles -->
    <string name="title_confirm_overwrite">Overwrite?</string>
    <string name="title_save_as">Save as</string>

    <!-- Labels -->
    <string name="document_outline">OUTLINE</string>
    <string name="insert">Insert</string>

</resources>