<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_header_editor" >

        <!-- <CheckBoxPreference -->
        <!-- android:defaultValue="true" -->
        <!-- android:key="backup_on_suspend" -->
        <!-- android:title="@string/pref_title_backup_on_suspend" /> -->

        <ListPreference
            android:defaultValue="18"
            android:entries="@array/font_sizes"
            android:entryValues="@array/font_sizes"
            android:key="font_size"
            android:title="@string/pref_title_font_size" />
        <ListPreference
            android:defaultValue="Sans Serif"
            android:entries="@array/font_families"
            android:entryValues="@array/font_families"
            android:key="font_family"
            android:title="@string/pref_title_font_family" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_compilation" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="autosave_before_compile"
            android:title="@string/pref_title_autosave_before_compile" />
    </PreferenceCategory>

</PreferenceScreen>