<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:icon="@drawable/ic_action_file"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_file">
        <menu>
            <item
                android:id="@+id/action_new"
                android:icon="@drawable/ic_action_new"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="@string/action_new"/>
            <item
                android:id="@+id/action_open"
                android:icon="@drawable/ic_action_open"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="@string/action_open"/>
            <item
                android:id="@+id/action_save"
                android:icon="@drawable/ic_action_save"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="@string/action_save"/>
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_action_send"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:title="@string/action_send"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_quit"
        android:icon="@drawable/ic_action_quit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_quit"/>

</menu>